use flask instead of busybox, add env var

--- a/ecs_run_task_def/task-def-image/docker-hello-world/Dockerfile
+++ b/ecs_run_task_def/task-def-image/docker-hello-world/Dockerfile
@@ -1,9 +1,5 @@
-FROM busybox
-
-ADD index.html /www/index.html
-
+FROM python:alpine3.7
+RUN pip install flask
+COPY index.py index.py
 EXPOSE 8080
-
-# Create a basic webserver and sleep forever
-CMD httpd -p 8080 -h /www; tail -f /dev/null
-
+CMD python ./index.py
